--- a/src/test.html
+++ b/src/test.html
@@ -9,6 +9,8 @@
 <body>
     <form action="https://localhost:4000/users" method="post" enctype="multipart/form-data">
         <input type="file" name="avatar">
+        <input type="file" name="updateimg">
+        <input type="submit" value="Update">
         <input type="submit" value="Submit">
     </form>
 </body>
